# edge-or-noise

./: .gitignore  LICENSE  README.md  README.ru.md  README.sk.md  pyproject.toml
collector/: collector.py  config.py  run.py  state.py  writer.py
experiments/: 01_baseline_and_horizon.py  02_features_models_indicators.py  03_orderbook_l2_and_whale_wall.py  04_leverage_and_equity_curve.py  05_smc_and_fundamentals.py  06_sferez_oos_confirmation.py  07_auc_significance.py  08_make_figures.py  common.py
reports/: FINAL_REPORT.md
tests/: test_features.py  test_labeling.py  test_validation.py
tickml/: __init__.py  config.py  features.py  labeling.py  loaders_live.py  loaders_sferez.py  models.py  orderbook_l2.py  validation.py
