[project]
name = "edge-or-noise"
version = "0.1.0"
description = "Research repo: does ML find a tradeable scalping edge in Bybit perpetual-futures tick data?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=15.0",
    "numba>=0.60",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "websockets>=16.0",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tickml"]
